add float wsp btn

--- a/css/styles.css
+++ b/css/styles.css
@@ -1127,3 +1127,32 @@ header, .navbar{
 }
 
 /* end home */
+
+/* wsp */
+
+.whatsapp-float {
+  position: fixed;
+  width: 60px;
+  height: 60px;
+  bottom: 40px;
+  right: 40px;
+  background-color: #25D366;
+  color: white;
+  border-radius: 50px;
+  text-align: center;
+  font-size: 24px;
+  box-shadow: 2px 2px 3px #999;
+  z-index: 100;
+}
+
+.whatsapp-float i {
+  margin-top: 18px;
+}
+
+.whatsapp-float:hover {
+  background-color: #09ff00;
+  color: white;
+  text-decoration: none;
+}
+
+/* end wsp */
