--- a/css/styles.css
+++ b/css/styles.css
@@ -706,9 +706,11 @@ header, .navbar{
   height: 2em;
   border: none;
 }
+
 .field button[type="submit"]{
   margin-bottom: 0.5em;
 }
+
 .field input:focus{
   border: 3px solid var(--fourth-brand-color);
   outline: none;
@@ -723,9 +725,19 @@ header, .navbar{
 .field input[type=number] {
   -moz-appearance: textfield;
 }
+
 .field button:hover{
   background-color: var(--second-brand-color);
   cursor: pointer;
+}
+
+.formulario__grupo, .consulta__grupo, .input-group{
+  margin-top: 12px;
+  margin-bottom:6px;
+}
+
+.formulario__input, .consulta__input{
+  margin-top: 10px;
 }
 
 .formulario__grupo-input,
@@ -739,10 +751,12 @@ header, .navbar{
   margin-bottom: 0;
   display: none;
 }
+
 .formulario__input-error-activo,
 .consulta__input-error-activo{
   display: block;
 }
+
 .formulario__validacion-estado,
 .consulta__validacion-estado{
   position: absolute;
