--- a/css/styles_admin.css
+++ b/css/styles_admin.css
@@ -1,6 +1,230 @@
+/* global settings */
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+input {
+    border: none;
+    outline: none;
+}
+
+/* end global settings */
+
+/* variables */
+
+:root {
+    --first-brand-color: #02DAFF;
+    --second-brand-color: #FF9331;
+    --third-brand-color: #D6B3F7;
+    --fourth-brand-color: #0400ff;
+    --fifth-brand-color: #7c07c0;
+    --sixth-brand-color: #ff91ed;
+    --seventh-brand-color: #ffec43;
+}
+
+/* end variables */
+
+/* brand colors */
+
+.brand-color-1 {
+    color: var(--first-brand-color);
+}
+
+.bg-brand-color-1 {
+    background-color: var(--first-brand-color);
+}
+
+.brand-color-2 {
+    color: var(--second-brand-color);
+}
+
+.bg-brand-color-2 {
+    background-color: var(--second-brand-color);
+}
+
+.brand-color-3 {
+    color: var(--third-brand-color);
+}
+
+.bg-brand-color-3 {
+    background-color: var(--third-brand-color);
+}
+
+.brand-color-4 {
+    color: var(--fourth-brand-color);
+}
+
+.bg-brand-color-4 {
+    background-color: var(--fourth-brand-color);
+}
+
+.brand-color-5 {
+    color: var(--fifth-brand-color);
+}
+
+.bg-brand-color-5 {
+    background-color: var(--fifth-brand-color);
+}
+
+.brand-color-6 {
+    color: var(--sixth-brand-color);
+}
+
+.bg-brand-color-6 {
+    background-color: var(--sixth-brand-color);
+}
+
+.brand-color-7 {
+    color: var(--seventh-brand-color);
+}
+
+.bg-brand-color-7 {
+    background-color: var(--seventh-brand-color);
+}
+
+/* end brand colors */
+
+/* custom scrollbar */
+
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px whitesmoke;
+    border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+    background: var(--fourth-brand-color);
+    border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: var(--fourth-brand-color);
+}
+
+html {
+    scrollbar-color: var(--fourth-brand-color) whitesmoke;
+    scrollbar-width: thin;
+}
+
+/* end custom scrollbar */
+
+/* titles and texts */
+
+.page-content {
+    margin: 3%;
+}
+
+.title {
+    color: var(--fifth-brand-color);
+    text-align: center;
+    text-transform: uppercase;
+    font-weight: bolder;
+    font-size: 2rem;
+    margin: 30px;
+}
+
+.section-title {
+    color: var(--second-brand-color);
+    text-align: center;
+    font-weight: bold;
+    font-size: 1.7rem;
+    margin: 30px;
+}
+
+.subtitle {
+    color: var(--second-brand-color);
+    font-weight: bold;
+    font-size: 1.5rem;
+    margin: 12px 0px;
+}
+
+.text {
+    text-align: justify;
+    font-size: 1rem;
+}
+
+/* end titles and texts */
+
+/* footer */
+
+#footer_admin {
+    margin-top: 8%;
+}
+
+footer {
+    bottom: 0px;
+    width: 100%;
+    background: var(--first-brand-color);
+    margin-top: 2%;
+    position: fixed;
+    bottom: 0px;
+    margin-bottom: 0px;
+    margin-top: 30px !important;
+}
+
+.footer-bottom {
+    padding: 5px;
+    font-size: 0.7rem;
+    background: black;
+    text-align: center;
+}
+
+.footer-bottom span {
+    color: lightgray;
+}
+
+/* end footer */
+
+/* header */
+
+header,
+.navbar {
+    top: 0;
+    margin-bottom: 90px !important;
+}
+
+.navbar {
+    background-color: var(--first-brand-color);
+    color: black;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    font-size: 1.063em;
+    font-weight: 600;
+    overflow: hidden;
+    position: fixed;
+    width: 100%;
+    z-index: 1;
+}
+
+.primary-icon {
+    height: 45px;
+}
+
+.secondary-icon {
+    height: 35px;
+    margin-left: 5px;
+}
+
+.navbar a {
+    color: black;
+    text-decoration: none;
+    background-color: var(--first-brand-color) !important;
+}
+
+/* end header */
+
+/* admin */
+
 body {
-    font-family: Arial, sans-serif;
-    background-color: #f9f9f9;
+    background-color: whitesmoke;
 }
 
 .contenedor-centrado {
@@ -11,7 +235,7 @@ body {
 
 p {
     font-family: 'Times New Roman', Times, serif;
-    background-color: #f9f9f9;
+    background-color: whitesmoke;
     max-width: 400px;
     margin: 0 auto;
     padding: 20px;
@@ -24,14 +248,14 @@ h4,
 h5,
 h6 {
     text-align: center;
-    color: #007bff;
+    color: var(--fourth-brand-color);
 }
 
 form {
     max-width: 400px;
     margin: 0 auto;
     padding: 20px;
-    background-color: white;
+    background-color: whitesmoke;
     border: 1px solid lightslategray;
     border-radius: 5px;
 }
@@ -40,7 +264,7 @@ table {
     max-width: 90%;
     margin: 0 auto;
     padding: 20px;
-    background-color: white;
+    background-color: whitesmoke;
     border: 1px solid lightslategray;
     border-radius: 5px;
 }
@@ -62,36 +286,36 @@ textarea {
 
 input[type="submit"] {
     padding: 10px;
-    background-color: #007bff;
-    color: #ffffff;
+    background-color: var(--first-brand-color);
+    color: whitesmoke;
     border: none;
     border-radius: 5px;
     cursor: pointer;
 }
 
 input[type="submit"]:hover {
-    background-color: #0056b3;
+    background-color: var(--fourth-brand-color);
 }
 
 button {
     padding: 8px;
     margin: 4px;
-    background-color: #007bff;
-    color: #ffffff;
+    background-color: var(--fourth-brand-color);
+    color: whitesmoke;
     border: none;
     border-radius: 5px;
     cursor: pointer;
 }
 
 button:hover {
-    background-color: #0056b3;
+    background-color: var(--fourth-brand-color);
 }
 
 a {
     padding: 8px;
     margin: 4px;
-    background-color: #fdab13;
-    color: #ffffff;
+    background-color: var(--second-brand-color);
+    color: whitesmoke;
     border: none;
     border-radius: 5px;
     cursor: pointer;
@@ -100,5 +324,7 @@ a {
 }
 
 a:hover {
-    background-color: #cd7b00;
+    background-color: var(--second-brand-color);
 }
+
+/* end admin */
