add login page and login control into admin pages

--- a/css/styles_admin.css
+++ b/css/styles_admin.css
@@ -4,7 +4,6 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 input {
@@ -221,6 +220,57 @@ header,
 
 /* end header */
 
+/* login */
+section .login {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: whitesmoke;
+}
+
+.login-container {
+    max-width: 400px;
+    width: 100%;
+    background-color: whitesmoke;
+}
+
+.login-container h2 {
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.login-container input[type="text"],
+.login-container input[type="password"],
+.login-container button {
+    display: block;
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 10px;
+    font-size: 16px;
+    border: 1px solid lightgray;
+    border-radius: 10px;
+}
+
+.login-container button {
+    background-color: var(--second-brand-color);
+    color: whitesmoke;
+    cursor: pointer;
+}
+
+.login-container button:hover {
+    background-color: var(--second-brand-color);
+    opacity: 0.7;
+}
+
+.login-container .error-message {
+    color: red !important;
+    margin-bottom: 10px;
+    padding: 3%;
+    text-align: center;
+}
+
+/* end login */
+
 /* admin */
 
 body {
@@ -234,7 +284,6 @@ body {
 }
 
 p {
-    font-family: 'Times New Roman', Times, serif;
     background-color: whitesmoke;
     max-width: 400px;
     margin: 0 auto;
@@ -325,6 +374,7 @@ a {
 
 a:hover {
     background-color: var(--second-brand-color);
+    opacity: 0.7;
 }
 
 /* end admin */
