--- a/css/styles_admin.css
+++ b/css/styles_admin.css
@@ -122,7 +122,7 @@ html {
 }
 
 .title {
-    color: var(--fifth-brand-color);
+    color: var(--second-brand-color);
     text-align: center;
     text-transform: uppercase;
     font-weight: bolder;
@@ -242,13 +242,11 @@ section .login {
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: whitesmoke;
 }
 
 .login-container {
     max-width: 400px;
     width: 100%;
-    background-color: whitesmoke;
 }
 
 .login-container h2 {
@@ -291,7 +289,9 @@ section .login {
 /* admin */
 
 body {
-    background-color: whitesmoke;
+    background-image: url("../img/admin/admin_bg.jpg");
+    background-repeat: repeat;
+    background-size: cover;
 }
 
 .contenedor-centrado {
@@ -314,7 +314,7 @@ h4,
 h5,
 h6 {
     text-align: center;
-    color: var(--fourth-brand-color);
+    color: var(--second-brand-color);
 }
 
 form {
@@ -375,6 +375,7 @@ button {
 
 button:hover {
     background-color: var(--fourth-brand-color);
+    opacity: 0.7;
 }
 
 a {
